err/pip-services-runtime.err
Listing '.'...
Listing './bin'...
Compiling './bin/bottle.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/bottle-0.12.13.egg-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/iso8601'...
Listing './lib/python3.5/site-packages/iso8601-0.1.12.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pip_services_runtime'...
Listing './lib/python3.5/site-packages/pip_services_runtime/addons'...
Listing './lib/python3.5/site-packages/pip_services_runtime/boot'...
Listing './lib/python3.5/site-packages/pip_services_runtime/build'...
Listing './lib/python3.5/site-packages/pip_services_runtime/cache'...
Listing './lib/python3.5/site-packages/pip_services_runtime/clients'...
Listing './lib/python3.5/site-packages/pip_services_runtime/commands'...
Listing './lib/python3.5/site-packages/pip_services_runtime/config'...
Listing './lib/python3.5/site-packages/pip_services_runtime/counters'...
Listing './lib/python3.5/site-packages/pip_services_runtime/data'...
Listing './lib/python3.5/site-packages/pip_services_runtime/discovery'...
Listing './lib/python3.5/site-packages/pip_services_runtime/errors'...
Listing './lib/python3.5/site-packages/pip_services_runtime/logic'...
Listing './lib/python3.5/site-packages/pip_services_runtime/logs'...
Listing './lib/python3.5/site-packages/pip_services_runtime/persistence'...
Compiling './lib/python3.5/site-packages/pip_services_runtime/persistence/MongoDbPersistence.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (MongoDbPersistence.py, line 117)
Listing './lib/python3.5/site-packages/pip_services_runtime/portability'...
Compiling './lib/python3.5/site-packages/pip_services_runtime/portability/Converter.py'...
***   File "./lib/python3.5/site-packages/pip_services_runtime/portability/Converter.py", line 78
    return Converter.to_long_with_default(value, 0L)
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pip_services_runtime/portability/DynamicMap.py'...
***   File "./lib/python3.5/site-packages/pip_services_runtime/portability/DynamicMap.py", line 129
    return self.get_long_with_default(path, 0L)
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip_services_runtime/run'...
Listing './lib/python3.5/site-packages/pip_services_runtime/services'...
Listing './lib/python3.5/site-packages/pip_services_runtime/validation'...
Listing './lib/python3.5/site-packages/pip_services_runtime-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
